# protembedder

./: .gitignore  README.md  pyproject.toml
protembedder/: __init__.py  cli.py  embedder.py  fasta.py  io.py
tests/: test_embedder.py  test_fasta.py  test_io.py
