[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protembedder"
version = "0.3.0"
description = "Extract protein embeddings from FASTA files using ESM-2, ProtT5, and ProtBert models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Dipayan Sarkar", email = "dipayansarkar26@gmail.com"},
]
keywords = ["protein", "embeddings", "ESM", "bioinformatics", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.12.0",
    "fair-esm>=2.0.0",
    "transformers>=4.30.0",
    "sentencepiece>=0.1.99",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
protembedder = "protembedder.cli:main"

[project.urls]
Homepage = "https://github.com/Dipayan26/protembedder"
Issues = "https://github.com/Dipayan26/protembedder/issues"

[tool.setuptools.packages.find]
include = ["protembedder*"]
